/cp 2018-02-13  Paolo Carlini  <paolo.carlini@oracle.com>

PR c++/84333
	* call.c (build_conditional_expr_1): Use cp_save_expr instead of
	save_expr for the G++ extension.

/testsuite
2018-02-13  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/84333
	* g++.dg/template/sizeof16.C: New.
	* g++.dg/template/sizeof17.C: Likewise.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@257638 138bc75d-0d04-0410-961f-82ee72b054a4